# ChangeLog for net-misc/streamtuner
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/ChangeLog,v 1.5 2004/03/31 12:34:02 aliz Exp $

  31 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> streamtuner-0.10.1.ebuild:
  Adding amd64 keyword, closing #46276.

*streamtuner-0.10.1 (28 Sep 2003)

  28 Sep 2003; jje <jje@gentoo.org> :
  Version bump.
  
  Submitted by: jon <jmoses@vtsportbike.net>

  12 Jun 2003; <msterret@gentoo.org> streamtuner-0.9.1.ebuild:
  fix Header

*streamtuner-0.9.1 (14 Mar 2003)

  14 Mar 2003; jje <jje@gentoo.org> streamtuner-0.9.1.ebuild:
  Initial revision.
  
  Submitted by: Ulli Ivens
