@@ -1,5 +1,8 @@
-MD5 a3a7dba62cf92907eb1febf6cd7006a2 streamtuner-0.9.1.ebuild 625
-MD5 5359c0166541548ace9e2b4a7c3b38f7 streamtuner-0.10.1.ebuild 668
-MD5 8b54de1f11f28ae65edb9a654f4a867b ChangeLog 698
+MD5 3253ec90a24b9870c78e9054b5ed1aac streamtuner-0.12.1.ebuild 790
+MD5 4a1daf2494dcbc3ed7a69181bdc8befc streamtuner-0.9.1.ebuild 630
+MD5 88b7392c1b968d0f06dc62e3ab2e4dd5 streamtuner-0.10.1.ebuild 674
+MD5 6d092d3727d0a5a20341da3c0b4df6c3 ChangeLog 963
+MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
 MD5 b84b0262ff100d11572df6b050eb8fae files/digest-streamtuner-0.10.1 70
+MD5 ff9351a4cfef434df51a0a1a01510780 files/digest-streamtuner-0.12.1 70
 MD5 1a305464a47f790c07c9504bccc4ac75 files/digest-streamtuner-0.9.1 69
