@@ -1,0 +1,31 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/Attic/streamtuner-0.12.1.ebuild,v 1.1 2004/04/09 04:40:41 eradicator Exp $
+
+inherit gnome2
+
+DESCRIPTION="Stream directory browser for browsing internet radio streams"
+SRC_URI="http://savannah.nongnu.org/download/${PN}/${P}.tar.gz"
+HOMEPAGE="http://www.nongnu.org/streamtuner/"
+
+IUSE=""
+SLOT="0"
+KEYWORDS="~x86"
+LICENSE="BSD"
+
+RDEPEND=">=x11-libs/gtk+-2.2.2
+	>=net-misc/curl-7.10.5
+	>=app-text/scrollkeeper-0.3.0"
+
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+DOCS="AUTHORS COPYING ChangeLog INSTALL NEWS README TODO"
+
+src_unpack() {
+	unpack ${A}
+
+	cd ${S}
+	# sandbox errors work around
+	gnome2_omf_fix ${S}/help/C/Makefile.in
+}
