@@ -1,8 +1,8 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/Attic/streamtuner-0.9.1.ebuild,v 1.7 2004/03/29 01:19:25 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/Attic/streamtuner-0.9.1.ebuild,v 1.8 2004/04/09 04:40:41 eradicator Exp $
 
-DESCRIPTION="Stream directory browser for browsing internetradio streams"
+DESCRIPTION="Stream directory browser for browsing internet radio streams"
 HOMEPAGE="http://www.nongnu.org/streamtuner/"
 SRC_URI="mirror://sourceforge/streamtuner/${P}.tar.gz"
 
