@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/streamtuner
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/ChangeLog,v 1.5 2004/03/31 12:34:02 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/streamtuner/ChangeLog,v 1.6 2004/04/09 04:40:41 eradicator Exp $
+
+*streamtuner-0.12.1 (08 Apr 2004)
+
+  08 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> metadata.xml,
+  streamtuner-0.10.1.ebuild, streamtuner-0.12.1.ebuild,
+  streamtuner-0.9.1.ebuild:
+  Version bump for bug #40009.  0.10.1 stable.  Added metadata.xml.
 
   31 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> streamtuner-0.10.1.ebuild:
   Adding amd64 keyword, closing #46276.
